--- a/index.html
+++ b/index.html
@@ -4,16 +4,135 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Czechitas podklady</title>
+		<link href="icon.png" rel="shortcut icon" type="image/x-icon" />
+		<meta name="color-scheme" content="light dark" />
+		<meta
+			name="theme-color"
+			media="(prefers-color-scheme: light)"
+			content="#ffffff"
+		/>
+		<meta
+			name="theme-color"
+			media="(prefers-color-scheme: dark)"
+			content="#000000"
+		/>
+		<style>
+			body {
+				font-family: sans-serif;
+				max-width: 40rem;
+				margin-inline: auto;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Czechitas podklady</h1>
-		<p>
-			Podklady jsou na
-			<a href="https://github.com/Czechitas-podklady-WEB">GitHubu zde</a>.
-		</p>
-
-		<script>
-			window.location = document.querySelector('a').getAttribute('href')
-		</script>
+		<h2>Nástroje</h2>
+		<ul>
+			<li>
+				<h3>
+					<a href="https://slack.czechitas-podklady.cz/"
+						>Generátor Slack ikon</a
+					>
+				</h3>
+				<p>
+					Nástroj pro vytváření ikon pro nové workspacy na Slacku v modrorůžovém
+					stylu.
+				</p>
+			</li>
+			<li>
+				<h3>
+					<a href="https://intro.czechitas-podklady.cz/"
+						>Konfigurátor intro slidu
+					</a>
+				</h3>
+				<p>
+					Nástroj pro úpravu úvodního slidu Czechitas prezentací. Užitečný
+					například pro tvorbu YouTube thumbnail nebo pro nastavení pozadí
+					projekční plochy na akci.
+				</p>
+			</li>
+		</ul>
+		<h2>Výukové materiály</h2>
+		<ul>
+			<li>
+				<h3>
+					<a href="https://kodim.cz/">Kódím.cz</a>
+				</h3>
+				<p>Web s podklady pro výuku všelijakých kurzů.</p>
+			</li>
+			<li>
+				<h3>
+					<a href="https://czechitas-podklady.cz/HTML-a-CSS-1/">HTML a CSS 1</a>
+				</h3>
+				<p>Web s podklady pro výuku HTML a CSS 1.</p>
+			</li>
+			<li>
+				<h3>
+					<a href="https://czechitas-podklady.cz/HTML-a-CSS-2/">HTML a CSS 2</a>
+				</h3>
+				<p>Web s podklady pro výuku HTML a CSS 2.</p>
+			</li>
+			<li>
+				<h3>
+					<a href="https://github.com/Czechitas-podklady-WEB"
+						>Podklady pro výuku webu</a
+					>
+				</h3>
+				<p>
+					Soubor Git repozitářů plný cvičení, nástrojů a dalších materiálů
+					podporujících převážně výuku webových kurzů.
+				</p>
+			</li>
+		</ul>
+		<h2>Manuály</h2>
+		<ul>
+			<li>
+				<h3>
+					<a href="https://czechitas-podklady.cz/git-instalace/"
+						>Git instalace</a
+					>
+				</h3>
+				<p>
+					Instrukce, jak nainstalovat Git na Windows, Mac nebo Linux a průvodce
+					registrací na GitHub.com.
+				</p>
+			</li>
+			<li>
+				<h3>
+					<a href="https://czechitas-podklady.cz/moje-czechitas-ukol-pres-gist/"
+						>GitHub Gist</a
+					>
+				</h3>
+				<p>
+					Krok za krokem, jak nahrát soubory na GitHub Gist a odevzdat jako úkol
+					přes Moje Czechitas.
+				</p>
+			</li>
+		</ul>
+		<h2>Další</h2>
+		<ul>
+			<li>
+				<h3>
+					<a href="https://www.czechitas.cz/">Web Czechitas</a>
+				</h3>
+			</li>
+			<li>
+				<h3>
+					<a href="https://lecturersczechitas.slack.com/">Lektorský Slack</a>
+				</h3>
+			</li>
+			<li>
+				<h3>
+					<a href="https://www.linkedin.com/school/czechitas/"
+						>Czechitas LinkedIn</a
+					>
+				</h3>
+			</li>
+			<li>
+				<h3>
+					<a href="https://www.instagram.com/czechitas/">Czechitas Instagram</a>
+				</h3>
+			</li>
+		</ul>
 	</body>
 </html>
