Přidán odkaz na Spotify playlist

--- a/index.html
+++ b/index.html
@@ -113,6 +113,19 @@
 		<ul>
 			<li>
 				<h3>
+					<a
+						href="https://open.spotify.com/playlist/3SBr6W1KR1tk7W09yM4sHX?si=0e15bed8060143d4"
+						>Spotify playlist</a
+					>
+				</h3>
+				<p>
+					Vybranou hudbu je možné pouštět například o přestávkách na akcích.
+					(Pozor: Kvůli autorským právům není vhodné pouštět do záznamu, který
+					pak jde například na YouTube.)
+				</p>
+			</li>
+			<li>
+				<h3>
 					<a href="https://www.czechitas.cz/">Web Czechitas</a>
 				</h3>
 			</li>
