--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Czechitas podklady</title>
+		<meta name="description" content="Rozcestník s užitečnými odkazy." />
 		<link href="icon.png" rel="shortcut icon" type="image/x-icon" />
 		<meta name="color-scheme" content="light dark" />
 		<meta
