Přidán Just-Countdown

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
 					projekční plochy na akci.
 				</p>
 			</li>
+			<li>
+				<h3>
+					<a href="https://just-countdown.eu/">Odpočet času</a>
+				</h3>
+				<p>
+					Web pro zobrazování odpočtů se vzdáleným ovládáním. V kombinaci s
+					<a href="https://obsproject.com/">OBS</a> lze využít přes virtuální
+					kameru i jako odpočet při prezentacích na Zoomu.
+				</p>
+			</li>
 		</ul>
 		<h2>Výukové materiály</h2>
 		<ul>
