--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				font-family: sans-serif;
 				max-width: 40rem;
 				margin-inline: auto;
+				padding-inline: 2rem;
 			}
 		</style>
 	</head>
