Přidány odkazy na komunitu a moje Czechitas

--- a/index.html
+++ b/index.html
@@ -143,6 +143,16 @@
 			</li>
 			<li>
 				<h3>
+					<a href="https://moje.czechitas.cz/">Moje Czechitas</a>
+				</h3>
+			</li>
+			<li>
+				<h3>
+					<a href="https://komunita.czechitas.cz/">Komunita Czechitas</a>
+				</h3>
+			</li>
+			<li>
+				<h3>
 					<a href="https://lecturersczechitas.slack.com/">Lektorský Slack</a>
 				</h3>
 			</li>
