Přidán odkaz na StreamBeats

--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@
 				<p>
 					Vybranou hudbu je možné pouštět například o přestávkách na akcích.
 					(Pozor: Kvůli autorským právům není vhodné pouštět do záznamu, který
-					pak jde například na YouTube.)
+					pak jde například na YouTube. Pro hudbu bez omezení můžete využít
+					třeba
+					<a
+						href="https://open.spotify.com/user/3goqul1iqkj8a3ka2s0a07ptr?si=f1bb7bc0c8db41c4"
+						>StreamBeats</a
+					>.)
 				</p>
 			</li>
 			<li>
