Přidání odkazy na Mousetrack a ScreenToGif

--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
 					kameru i jako odpočet při prezentacích na Zoomu.
 				</p>
 			</li>
+			<li>
+				<h3>
+					<a href="http://www.swordsoft.idv.tw/mousetrack/#win"
+						>SwordSoft Mousetrack</a
+					>
+				</h3>
+				<p>
+					Nástroj pro kreslení na obrazovku ve Windows. Užitečné například na
+					zvýrazňování, dokreslení souvislostí.
+				</p>
+			</li>
+			<li>
+				<h3>
+					<a href="https://www.screentogif.com/">ScreenToGif</a>
+				</h3>
+				<p>
+					Aplikace pro záznam obrazovky ve Windows. Možné využít například v
+					různých návodech s animacemi pro oživení a zpřehlednění instrukcí.
+				</p>
+			</li>
 		</ul>
 		<h2>Výukové materiály</h2>
 		<ul>
