Přidán odkaz na klavesnice.czechitas-podklady.cz

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 			</li>
 			<li>
 				<h3>
+					<a href="https://klavesnice.czechitas-podklady.cz/"
+						>Jak na klávesnici
+					</a>
+				</h3>
+				<p>Přehled, jak psát speciální znaky na různých klávesnicích.</p>
+			</li>
+			<li>
+				<h3>
 					<a href="https://just-countdown.eu/">Odpočet času</a>
 				</h3>
 				<p>
