Nástroje: přidán Raw Githack

--- a/index.html
+++ b/index.html
@@ -83,6 +83,18 @@
 					různých návodech s animacemi pro oživení a zpřehlednění instrukcí.
 				</p>
 			</li>
+			<li>
+				<h3>
+					<a
+						href="https://chrome.google.com/webstore/detail/raw-githack/iichepgnbggmoaijfiphjodmhkbijmkf"
+						>Raw Githack
+					</a>
+				</h3>
+				<p>
+					Rozšíření prohlížeče Google Chrome / MS Edge zjednodušíjící prohlížení
+					webových stránek na GitHubu bez aktivovaných GitHub Pages.
+				</p>
+			</li>
 		</ul>
 		<h2>Výukové materiály</h2>
 		<ul>
