--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
 			</li>
 			<li>
 				<h3>
+					<a href="https://prestavka.czechitas-podklady.cz/"
+						>Odpočet přestávky
+					</a>
+				</h3>
+				<p>
+					Nástroj pro přichystání, zobrazení a ovládání slidu s přestávkovým
+					odpočtem.
+				</p>
+			</li>
+			<li>
+				<h3>
 					<a href="http://www.swordsoft.idv.tw/mousetrack/#win"
 						>SwordSoft Mousetrack</a
 					>
