--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 				<h3>
 					<a href="http://www.swordsoft.idv.tw/mousetrack/#win"
 						>SwordSoft Mousetrack</a
-					>
+					> nebo <a href="https://learn.microsoft.com/en-us/sysinternals/downloads/zoomit"
+					>ZoomIt</a
+				>
 				</h3>
 				<p>
 					Nástroj pro kreslení na obrazovku ve Windows. Užitečné například na
