Přidán link na HTML a CSS jaro 2024

--- a/index.html
+++ b/index.html
@@ -78,9 +78,12 @@
 				<h3>
 					<a href="http://www.swordsoft.idv.tw/mousetrack/#win"
 						>SwordSoft Mousetrack</a
-					> nebo <a href="https://learn.microsoft.com/en-us/sysinternals/downloads/zoomit"
-					>ZoomIt</a
-				>
+					>
+					nebo
+					<a
+						href="https://learn.microsoft.com/en-us/sysinternals/downloads/zoomit"
+						>ZoomIt</a
+					>
 				</h3>
 				<p>
 					Nástroj pro kreslení na obrazovku ve Windows. Užitečné například na
@@ -116,6 +119,14 @@
 					<a href="https://kodim.cz/">Kódím.cz</a>
 				</h3>
 				<p>Web s podklady pro výuku všelijakých kurzů.</p>
+			</li>
+			<li>
+				<h3>
+					<a href="https://czechitas-podklady.cz/HTML-a-CSS_jaro-2024/"
+						>HTML a CSS (jaro 2024)</a
+					>
+				</h3>
+				<p>Web s podklady pro výuku kurzu HTML a CSS učeného na jaře 2024</p>
 			</li>
 			<li>
 				<h3>
